--- a/usr.bin/lock/lock.1
+++ b/usr.bin/lock/lock.1
@@ -1,5 +1,4 @@
-.\"	$OpenBSD: lock.1,v 1.10 2000/11/09 17:52:19 aaron Exp $
-.\"	$NetBSD: lock.1,v 1.4 1994/12/22 01:16:21 jtc Exp $
+.\"	$OpenBSD: lock.1,v 1.11 2001/05/29 21:38:15 millert Exp $
 .\"
 .\" Copyright (c) 1987, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -44,6 +43,7 @@
 .Nm lock
 .Op Fl n
 .Op Fl p
+.Op Fl a Ar style
 .Op Fl t Ar timeout
 .Sh DESCRIPTION
 .Nm
@@ -62,8 +62,7 @@ Terminal will be locked forever.
 .It Fl p
 A password is not requested, instead the user's current login password
 is used.
-If the user has an S/Key key, they may also use it
-to unlock the terminal.
+If the user has an S/Key key, they may also use it to unlock the terminal.
 To do this the user should enter
 .Qq s/key
 at the unlock
@@ -72,13 +71,26 @@ prompt.
 The user will then be issued an S/Key
 challenge to which they may respond with a six-word S/Key one-time
 password.
+.It Fl a Ar style
+The specified BSD Authentication login
+.Ar style
+(as specified in
+.Pa /etc/login.conf )
+will be used to authenticate the user.  If the particular
+.Ar style
+requires a challenge/response handshake or a special prompt, the
+user may enter the name of the
+.Ar style
+to get the standard prompt for that
+.Ar style .
 .It Fl t Ar timeout
 The time limit (default 15 minutes) is changed to
 .Ar timeout
 minutes.
 .El
 .Sh SEE ALSO
-.Xr skey 1
+.Xr skey 1 ,
+.Xr login.conf 5
 .Sh HISTORY
 The
 .Nm
