--- a/usr.bin/login/login.1
+++ b/usr.bin/login/login.1
@@ -1,5 +1,4 @@
-.\"	$OpenBSD: login.1,v 1.14 2000/11/29 23:15:09 millert Exp $
-.\"	$NetBSD: login.1,v 1.7 1995/08/31 22:52:33 jtc Exp $
+.\"	$OpenBSD: login.1,v 1.15 2001/05/29 21:39:26 millert Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -44,6 +43,8 @@
 .Nm login
 .Op Fl fp
 .Op Fl h Ar hostname
+.Op Fl L Ar local-ip-address
+.Op Fl R Ar remote-ip-address
 .Op Fl u Ar username
 .Op Ar user
 .Sh DESCRIPTION
@@ -55,13 +56,15 @@ If no user is specified, or if a user is specified and authentication
 of the user fails,
 .Nm
 prompts for a user name.
-Authentication of users is done via passwords.
-Alternately, the user can enter the password
-.Qq s/key ,
-in which case
-S/Key authentication of users is performed, as descibed in
-.Xr skey 1 .
-S/Key is a Trademark of Bellcore.
+Authentication of users is normally done via passwords, though
+external authentication mechanisms may be used (see
+.Xr login.conf 5 Ns No ).
+To specify the alternate authentication mechanism
+.Va style ,
+the string
+.Li : Ns Va style
+is appended to the user name (i.e.,
+.Ar user Ns Li : Ns Va style Ns ).
 .Pp
 The options are as follows:
 .Bl -tag -width Ds
@@ -78,11 +81,13 @@ Specifies the host from which the connection was received.
 It is used by various daemons such as
 .Xr telnetd 8 .
 This option may only be used by the superuser.
-.It Fl u Ar username
-Specifies the remote user that initiated the connection.
-It is used by various daemons such as
-.Xr telnetd 8 .
-This option may only be used by the superuser.
+.It Fl L
+The
+.Fl L
+option specifies the local ip address of a socket such as telnetd
+would use.
+This information is passed on to any classify script (see
+.Xr login.conf 5 ) .
 .It Fl p
 By default,
 .Nm
@@ -90,11 +95,25 @@ discards any previous environment.
 The
 .Fl p
 option disables this behavior.
+.It Fl R
+The
+.Fl R
+option specifies the remote ip address of a socket such as telnetd
+would use.
+This information is passed on to any classify script (see
+.Xr login.conf 5 ) .
+.It Fl u Ar username
+Specifies the remote user that initiated the connection.
+It is used by various daemons such as
+.Xr telnetd 8 .
+This option may only be used by the superuser.
 .El
 .Pp
 If the file
 .Pa /etc/nologin
-exists,
+exists (and the
+.Dq ignorenologin
+boolean is not set in the user's login class),
 .Nm
 displays its contents to the user and exits.
 This is used by
@@ -182,18 +201,20 @@ flag was specified.
 .Bl -tag -width /var/log/failedlogin -compact
 .It Pa /etc/fbtab
 changes device protections
+.It Pa /etc/login.conf
+login configuration
 .It Pa /etc/motd
 message-of-the-day
 .It Pa /etc/nologin
 disallows logins
 .It Pa /var/run/utmp
 current logins
+.It Pa /var/log/failedlogin
+failed login account records
 .It Pa /var/log/lastlog
 last login account records
 .It Pa /var/log/wtmp
 login account records
-.It Pa /var/log/failedlogin
-failed login account records
 .It Pa /var/mail/user
 system mailboxes
 .It Pa \&.hushlogin
@@ -203,9 +224,10 @@ makes login quieter
 .Xr chpass 1 ,
 .Xr passwd 1 ,
 .Xr rlogin 1 ,
-.Xr skey 1 ,
 .Xr getpass 3 ,
+.Xr setusercontext 3 ,
 .Xr fbtab 5 ,
+.Xr login.conf 5 ,
 .Xr utmp 5 ,
 .Xr environ 7
 .Sh HISTORY
