/usr/share/ipf is no more

--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.23 2001/03/20 03:07:31 aaron Exp $
+.\"	$OpenBSD: hier.7,v 1.24 2001/05/30 03:08:50 millert Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -296,8 +296,6 @@ ASCII text files used by various games.
 GNU troff shared fonts.
 .It Li info/
 Texinfo source files.
-.It Li ipf/
-IPFilter example files.
 .It Li ipsec/
 IPSec example files.
 .It Li lkm/
