--- a/usr.bin/nm/nm.1
+++ b/usr.bin/nm/nm.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nm.1,v 1.7 2001/02/18 21:45:09 espie Exp $
+.\"	$OpenBSD: nm.1,v 1.8 2001/05/30 16:58:40 smart Exp $
 .\"	$NetBSD: nm.1,v 1.3 1995/08/31 23:41:58 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -43,7 +43,7 @@
 .Sh SYNOPSIS
 .Nm nm
 .Op Fl agnopruw
-.Ar file Op Ar ...
+.Op Ar file ...
 .Sh DESCRIPTION
 The symbol table (name list) of each object in
 .Ar file(s)
