--- a/usr.bin/size/size.1
+++ b/usr.bin/size/size.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: size.1,v 1.8 2000/11/09 17:52:37 aaron Exp $
+.\"	$OpenBSD: size.1,v 1.9 2001/05/30 16:58:39 smart Exp $
 .\"	$NetBSD: size.1,v 1.6 1996/01/14 23:07:11 pk Exp $
 .\"
 .\" Copyright (c) 1990, 1993, 1994
@@ -44,7 +44,7 @@
 .Nm size
 .Op Fl t
 .Op Fl w
-.Ar file Op Ar ...
+.Op Ar file Ar ...
 .Sh DESCRIPTION
 .Nm
 displays the text, data and bss segment sizes of the specified
