--- a/share/man/man4/sqphy.4
+++ b/share/man/man4/sqphy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sqphy.4,v 1.4 2000/10/18 02:38:23 aaron Exp $
+.\"	$OpenBSD: sqphy.4,v 1.5 2001/05/31 09:08:21 deraadt Exp $
 .\"	$NetBSD: sqphy.4,v 1.1 1998/11/04 05:53:59 thorpej Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -36,18 +36,18 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd November 3, 1998
+.Dd May 31, 2001
 .Dt SQPHY 4
 .Os
 .Sh NAME
 .Nm sqphy
-.Nd Seeq 80220/80221 and 80223 10/100 Ethernet PHY driver
+.Nd Seeq 80220/80221, 80223 and 84220 10/100 Ethernet PHY driver
 .Sh SYNOPSIS
 .Cd "sqphy* at mii? phy ?"
 .Sh DESCRIPTION
 The
 .Nm
-driver supports the Seeq 80220/80221 and 80223 10/100 Ethernet PHYs.  The
+driver supports the Seeq 80220/80221, 80223 and 84220 10/100 Ethernet PHYs.  The
 80223 is a 3.3 volt version of the 80221.
 These PHYs are found on a variety of high-performance Ethernet interfaces.
 .Sh SEE ALSO
