--- a/lib/libpthread/man/pthread_equal.3
+++ b/lib/libpthread/man/pthread_equal.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pthread_equal.3,v 1.5 1999/11/24 05:35:32 d Exp $
+.\" $OpenBSD: pthread_equal.3,v 1.6 2001/06/01 00:07:11 jasoni Exp $
 .\" Copyright (c) 1996 John Birrell <jb@cimlogic.com.au>.
 .\" All rights reserved.
 .\"
@@ -51,7 +51,7 @@ and
 .Sh RETURN VALUES
 The
 .Fn pthread_equal
-function will non-zero if the thread IDs
+function will return non-zero if the thread IDs
 .Fa t1
 and
 .Fa t2
