--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.8,v 1.64 2001/05/14 07:13:51 angelos Exp $
+.\"	$OpenBSD: sysctl.8,v 1.65 2001/06/03 03:56:03 angelos Exp $
 .\"	$NetBSD: sysctl.8,v 1.4 1995/09/30 07:12:49 thorpej Exp $
 .\"
 .\" Copyright (c) 1993
@@ -145,6 +145,8 @@ privilege can change the value.
 .It kern.tty.tk_nout	int64_t	no
 .It kern.tty.tk_rawcc	int64_t	no
 .It kern.tty.tk_cancc	int64_t	no
+.It kern.fscale		int	no
+.It kern.ccpu		u_int	no
 .It vm.loadavg	struct	no
 .It vm.psstrings	struct	no
 .It vm.swapencrypt.enable	integer	yes
