--- a/bin/md5/md5.1
+++ b/bin/md5/md5.1
@@ -1,6 +1,6 @@
-.\"	$OpenBSD: md5.1,v 1.10 2000/11/09 17:51:56 aaron Exp $
+.\"	$OpenBSD: md5.1,v 1.11 2001/06/03 17:51:29 millert Exp $
 .\"
-.Dd February 14, 1994
+.Dd June 4, 2001
 .Dt MD5 1
 .Os
 .Sh NAME
@@ -8,9 +8,10 @@
 .Nd calculate a message-digest fingerprint (checksum) for a file
 .Sh SYNOPSIS
 .Nm md5
-.Op Fl ptx
-.Op Fl s Ar string
-.Op Ar file ...
+.Oo
+.Fl p | Fl t | Fl x |
+.Fl s Ar string | Ar file ...
+.Oc
 .Sh DESCRIPTION
 .Nm
 takes as input a message of arbitrary length and produces
@@ -18,6 +19,7 @@ as output a 128-bit "fingerprint" or "message digest" of the input.
 It is conjectured that it is computationally infeasible to produce
 two messages having the same message digest, or to produce any
 message having a given prespecified target message digest.
+.Pp
 The
 .Em MD5
 algorithm is intended for digital signature applications, where a
@@ -41,8 +43,6 @@ Runs a built-in time trial.
 Runs a built-in test script.
 .El
 .Pp
-These four options may be used in any combination and must
-precede any files named on the command line.
 The MD5 sum of each file listed on the command line is printed after the
 options are processed.
 .Sh SEE ALSO
@@ -51,6 +51,3 @@ options are processed.
 .Xr sha1 1
 .Pp
 RFC 1321 describes in detail the MD2, MD4, and MD5 message-digest algorithms.
-.Sh ACKNOWLEDGEMENTS
-This program is placed in the public domain for free general use by
-RSA Data Security.
