--- a/games/boggle/boggle/boggle.6
+++ b/games/boggle/boggle/boggle.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: boggle.6,v 1.5 1999/05/23 14:11:07 aaron Exp $
+.\"	$OpenBSD: boggle.6,v 1.6 2001/06/03 23:25:35 pjanzen Exp $
 .\"	$NetBSD: boggle.6,v 1.2 1995/03/21 12:14:35 cgd Exp $
 .\"
 .\" Copyright (c) 1997, Jason Downs.  All rights reserved.
@@ -85,61 +85,62 @@
 The object of
 .Nm
 is to find as many words as possible on the Boggle board within the three
-minute time limit.  A Boggle board is a four by four arrangement of Boggle
-cubes, each side of each cube displaying a letter of the alphabet or
+minute time limit.
+A Boggle board is a four by four arrangement of Boggle cubes, each side of
+each cube displaying a letter of the alphabet or
 .Sq qu .
 Words are formed by finding a sequence of cubes (letters) that are in the
-game's dictionary.  The (N+1)th cube in the word must be horizontally,
-vertically, or diagonally adjacent to the Nth cube.  Cubes cannot be reused.
+game's dictionary.
+The (N+1)th cube in the word must be horizontally,
+vertically, or diagonally adjacent to the Nth cube.
+Cubes cannot be reused.
 Words consist solely of lower case letters and must be at least 3 letters long.
 .Sh OPTIONS
 Command line flags can be given to change the rules of the game.
-.Bl -tag -width XxXXXXXXXX
-.It Ar +
-The
-.Ar +
-flag allows a cube to be used multiple times, but not in succession.
-.It Ar ++
-The
-.Ar ++
-flag allows the same cubes to be considered adjacent to itself.
-.It Fl s Ar seed
-Specify a seed other than the time of day, where
-.Ar seed
-is the seed.
-.It Fl t Ar time
-The time limit may be changed from the default 3 minutes, where
-.Ar time
-is the duration (in seconds) of each game.
-.It Fl w Ar length
-The minimum word length may be changed from 3 letters, where
-.Ar length
-is the minimum number of letters to use.
+.Bl -tag -width boardspec
 .It Fl b
-The
-.Fl b
-flag puts
+Run
 .Nm
 in batch mode.
-.El
-.Pp
-A starting board position can be specified on the command line by
-listing the board left to right and top to bottom.
-.Pp
 A
 .Ar boardspec
 must also be given.
 The dictionary is read from stdin and a list of words appearing in
 .Ar boardspec
 is printed to stdout.
+.It Fl d
+Enable debugging output.
+.It Fl s Ar seed
+Specify a
+.Ar seed
+other than the time of day.
+.It Fl t Ar time
+Change the time limit for each game from the default 3 minutes to
+.Ar time
+seconds.
+.It Fl w Ar length
+Change the minimum word length from 3 letters to
+.Ar length .
+.It Ar +
+Allow a cube to be used multiple times, but not in succession.
+.It Ar ++
+Allow a cube to be considered adjacent to itself.
+.El
+.Pp
+A starting board position,
+.Ar boardspec ,
+can be specified on the command line by
+listing the board left to right and top to bottom, in lower case.
 .Pp
 Help is available during play by typing
 .Sq ? .
 More detailed information on the game is given there.
 .Sh BUGS
-If there are a great many words in the cube the final display of the words
-may scroll off the screen.  (On a 25 line screen about 130 words can be
-displayed.)
+If there are a great many words in the cube, the final display of the words
+may scroll off the screen.
+.Po
+On a 25 line screen about 130 words can be displayed.
+.Pc
 .Pp
 No word can contain a
 .Sq q
@@ -150,7 +151,8 @@ When using the
 .Ar +
 or
 .Ar ++
-options the display of words found in the board doesn't indicate reused cubes.
+options the display of words found in the board doesn't clearly indicate
+reused cubes.
 .Sh AUTHOR
 Boggle is a trademark of Parker Brothers.
 .Pp
