--- a/usr.sbin/ppp/ppp/ppp.8
+++ b/usr.sbin/ppp/ppp/ppp.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ppp.8,v 1.109 2001/03/24 01:06:04 brian Exp $
+.\" $OpenBSD: ppp.8,v 1.110 2001/06/04 16:09:29 brian Exp $
 .Dd September 20, 1995
 .Dt PPP 8
 .Os
@@ -1154,7 +1154,7 @@ to enable a
 on the port where the modem is attached.
 For example:
 .Pp
-.Dl ttyd1 "/usr/libexec/getty std.38400" dialup on secure
+.Dl ttyd1 Qo /usr/libexec/getty std.38400 Qc dialup on secure
 .Pp
 Don't forget to send a
 .Dv HUP
@@ -1164,6 +1164,27 @@ process to start the
 .Xr getty 8 :
 .Pp
 .Dl # kill -HUP 1
+.Pp
+It is usually also necessary to train your modem to the same DTR speed
+as the getty:
+.Bd -literal -offset indent
+# ppp
+ppp ON awfulhak> set device /dev/cua01
+ppp ON awfulhak> set speed 38400
+ppp ON awfulhak> term
+deflink: Entering terminal mode on /dev/cua01
+Type `~?' for help
+at
+OK
+at
+OK
+atz
+OK
+at
+OK
+~.
+ppp ON awfulhak> quit
+.Ed
 .It
 Create a
 .Pa /usr/local/bin/ppplogin
@@ -1702,6 +1723,7 @@ command below.
 must be one of
 .Sq icmp ,
 .Sq igmp ,
+.Sq ipip ,
 .Sq ospf ,
 .Sq udp
 or
@@ -2467,13 +2489,13 @@ mp:
  set dial "ABORT BUSY ABORT NO\\sCARRIER TIMEOUT 5 \\"\\" ATZ \e
            OK-AT-OK \\\\dATDT\\\\T TIMEOUT 45 CONNECT"
  set login
- set ifaddr 10.0.0.1/0 10.0.0.2/0
+ set ifaddr 10.0.0.1/0 10.0.0.2/0 0.0.0.0 0.0.0.0
  set authname ppp
  set authkey ppppassword
 
  set mrru 1500
- clone 1,2,3
- link deflink remove
+ clone 1,2,3		# Create 3 new links - duplicates of the default
+ link deflink remove	# Delete the default link (called ``deflink'')
 .Ed
 .Pp
 Note how all cloning is done at the end of the configuration.
@@ -4587,7 +4609,7 @@ as they travel across the link.
 .Oo Op host
 .Ar src_addr Ns Op / Ns Ar width
 .Op Ar dst_addr Ns Op / Ns Ar width
-.Oc [ tcp|udp|ospf|igmp|icmp Op src lt|eq|gt Ar port
+.Oc [ tcp|udp|ospf|ipip|igmp|icmp Op src lt|eq|gt Ar port
 .Op dst lt|eq|gt Ar port
 .Op estab
 .Op syn
