--- a/usr.sbin/pwd_mkdb/pwd_mkdb.8
+++ b/usr.sbin/pwd_mkdb/pwd_mkdb.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pwd_mkdb.8,v 1.11 2000/11/26 01:23:12 millert Exp $
+.\"	$OpenBSD: pwd_mkdb.8,v 1.12 2001/06/05 04:11:25 millert Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -74,7 +74,7 @@ Create a Version 7 style password file and install it into
 .It Fl d Ar directory
 Operate in a base directory other than the default of
 .Pa /etc .
-+.It Fl u Ar username
+.It Fl u Ar username
 Only update the record for the specified user.  Utilities that
 operate on a single user can use this option to avoid the
 overhead of rebuilding the entire database.  This option must
