--- a/share/man/man4/man4.i386/pctr.4
+++ b/share/man/man4/man4.i386/pctr.4
@@ -1,12 +1,11 @@
-.\"	$OpenBSD: pctr.4,v 1.12 2001/04/10 08:17:55 deraadt Exp $
+.\"	$OpenBSD: pctr.4,v 1.13 2001/06/05 05:05:39 pvalchev Exp $
 .\"
 .\" Pentium performance counter driver for OpenBSD.
 .\" Copyright 1996 David Mazieres <dm@lcs.mit.edu>.
 .\"
 .\" Modification and redistribution in source and binary forms is
 .\" permitted provided that due credit is given to the author and the
-.\" OpenBSD project (for instance by leaving this copyright notice
-.\" intact).
+.\" OpenBSD project by leaving this copyright notice intact. 
 .\"
 .Dd August 15, 1996
 .Dt PCTR 4 i386
