--- a/sbin/reboot/reboot.8
+++ b/sbin/reboot/reboot.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: reboot.8,v 1.21 2001/01/28 19:23:05 marc Exp $
+.\"	$OpenBSD: reboot.8,v 1.22 2001/06/05 15:23:43 aaron Exp $
 .\"	$NetBSD: reboot.8,v 1.3 1995/10/05 05:36:21 mycroft Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
@@ -40,8 +40,7 @@
 .Sh NAME
 .Nm reboot ,
 .Nm halt
-.Nd
-stopping and restarting the system
+.Nd stopping and restarting the system
 .Sh SYNOPSIS
 .Nm halt
 .Op Fl dnpq
@@ -95,10 +94,6 @@ script which is run at shutdown time
 .Sh SEE ALSO
 .Xr utmp 5 ,
 .Xr boot 8 ,
-.Xr rc.shutdown 8 ,
-.Xr savecore 8 ,
-.Xr shutdown 8 ,
-.Xr sync 8 ,
 .Xr boot_alpha 8 ,
 .Xr boot_amiga 8 ,
 .Xr boot_hp300 8 ,
@@ -108,7 +103,11 @@ script which is run at shutdown time
 .Xr boot_powerpc 8 ,
 .Xr boot_sparc 8 ,
 .Xr boot_sun3 8 ,
-.Xr boot_vax 8
+.Xr boot_vax 8 ,
+.Xr rc.shutdown 8 ,
+.Xr savecore 8 ,
+.Xr shutdown 8 ,
+.Xr sync 8
 .Sh HISTORY
 A
 .Nm reboot
