--- a/games/bcd/bcd.6
+++ b/games/bcd/bcd.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bcd.6,v 1.9 2001/03/08 01:45:46 pjanzen Exp $
+.\"	$OpenBSD: bcd.6,v 1.10 2001/06/06 20:35:38 pjanzen Exp $
 .\"
 .\" Copyright (c) 1988, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -34,7 +34,7 @@
 .\"	@(#)bcd.6	8.1 (Berkeley) 5/31/93
 .\"
 .Dd May 31, 1993
-.Dt "BCD" 6
+.Dt BCD 6
 .Os
 .Sh NAME
 .Nm bcd ,
